--- a/en/index.html
+++ b/en/index.html
@@ -133,7 +133,7 @@
 	</head>
 	<body>
 		<div id="main">
-			<div id="lang"><a href="/en">Ru</a></div>
+			<div id="lang"><a href="/">Ru</a></div>
 			<div id="content">
 				<h1>Schulte table</h1>
 				<div id="description">
