--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					
 					<div class="btns_container">
 						<a href="/training" class="online">Тренироваться онлайн</a>
-						<a href="https://play.google.com/store/apps/details?id=ru.kriopeg.pdd.bileti&referrer=utm_source%3Dweb_schulte_ru%26utm_medium%3Dmain" class="android" target="_blank">Скачать на Android</a>
+						<a href="https://play.google.com/store/apps/details?id=ru.kriopeg.schultetable&referrer=utm_source%3Dweb_schulte_ru%26utm_medium%3Dmain" class="android" target="_blank">Скачать на Android</a>
 					</div>
 				</div>
 			</div>
