--- a/en/index.html
+++ b/en/index.html
@@ -147,7 +147,7 @@
 					
 					<div class="btns_container">
 						<a href="/training/en" class="online">Train online</a>
-						<a href="https://play.google.com/store/apps/details?id=ru.kriopeg.pdd.bileti&referrer=utm_source%3Dweb_schulte_en%26utm_medium%3Dmain" class="android" target="_blank">Download for Android</a>
+						<a href="https://play.google.com/store/apps/details?id=ru.kriopeg.schultetable&referrer=utm_source%3Dweb_schulte_en%26utm_medium%3Dmain" class="android" target="_blank">Download for Android</a>
 					</div>
 				</div>
 			</div>
