--- a/training/index.html
+++ b/training/index.html
@@ -603,7 +603,7 @@
 				<div class="dot"></div>
 			</div>
 			<div id="btn_gplay">
-				<a href='https://play.google.com/store/apps/details?id=ru.kriopeg.pdd.bileti&referrer=utm_source%3Dweb_schulte_ru%26utm_medium%3Dtrain' target="_blank"><img alt='Доступно в Google Play' src='../images/google-play-badge-ru.png'/></a>
+				<a href='https://play.google.com/store/apps/details?id=ru.kriopeg.schultetable&referrer=utm_source%3Dweb_schulte_ru%26utm_medium%3Dtrain' target="_blank"><img alt='Доступно в Google Play' src='../images/google-play-badge-ru.png'/></a>
 			</div>
 		</div>
 		
