--- a/training/en/index.html
+++ b/training/en/index.html
@@ -602,7 +602,7 @@
 				<div class="dot"></div>
 			</div>
 			<div id="btn_gplay">
-				<a href='https://play.google.com/store/apps/details?id=ru.kriopeg.pdd.bileti&referrer=utm_source%3Dweb_schulte_en%26utm_medium%3Dtrain' target="_blank"><img alt='Available on Google Play' src='../../images/google-play-badge-en.png'/></a>
+				<a href='https://play.google.com/store/apps/details?id=ru.kriopeg.schultetable&referrer=utm_source%3Dweb_schulte_en%26utm_medium%3Dtrain' target="_blank"><img alt='Available on Google Play' src='../../images/google-play-badge-en.png'/></a>
 			</div>
 		</div>
 		
