--- a/training/en/index.html
+++ b/training/en/index.html
@@ -585,7 +585,7 @@
 					</div>
 					<div class="btns">
 						<div class="table_btns">
-							<a class="btn_info" href="/">Information</a>
+							<a class="btn_info" href="/en">Information</a>
 							<div class="btn_restart">Restart</div>
 							<div class="btn_settings">Settings</div>
 						</div>
