--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Тренируйте навык скорочтения и зрительное восприятие с помощью таблиц Шульте">
 		<meta name="keywords" content="таблица шульте, скорочтение, тренажер, периферическое зрение, зрительное восприятие, тренировка скорочтения, таблица шульте онлайн, скорочтение для детей, упражнения">
 		<title>Таблица Шульте - тренажер скорочтения</title>
+		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 		<style type="text/css">
 			body{
