--- a/en/index.html
+++ b/en/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Train speed reading skills and visual perception using Schulte tables">
 		<meta name="keywords" content="schulte table, speed reading, training, peripheral vision, visual perception, speed reading training, schulte table online, speed reading for children, exercises">
 		<title>Schulte table - speed reading training</title>
+		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 		<style type="text/css">
 			body{
