--- a/training/index.html
+++ b/training/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Тренируйте скорочтение онлайн с помощью таблиц Шульте">
 		<meta name="keywords" content="таблица шульте, скорочтение, тренажер, периферическое зрение, зрительное восприятие, тренировка скорочтения">
 		<title>Таблица Шульте онлайн</title>
+		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="../bootstrap.min.css">
 		<style type="text/css">
