--- a/training/en/index.html
+++ b/training/en/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="Train speed reading online with Schulte tables">
 		<meta name="keywords" content="schulte table, speed reading, training, kids, android, download, schulte online">
 		<title>Schulte table online</title>
+		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="../../bootstrap.min.css">
 		<style type="text/css">
