--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="description" content="Тренируйте навык скорочтения и зрительное восприятие с помощью таблиц Шульте">
-		<meta name="keywords" content="таблица шульте, скорочтение, тренажер, периферическое зрение, зрительное восприятие, тренировка скорочтения, таблица шульте онлайн, скорочтение для детей, упражнения">
+		<meta name="keywords" content="таблица шульте, скорочтение, тренажер, периферическое зрение, зрительное восприятие, тренировка скорочтения, таблица шульте онлайн, скорочтение для детей, упражнения, игра">
 		<title>Таблица Шульте - тренажер скорочтения</title>
 		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
