--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="description" content="Train speed reading skills and visual perception using Schulte tables">
-		<meta name="keywords" content="schulte table, speed reading, training, peripheral vision, visual perception, speed reading training, schulte table online, speed reading for children, exercises">
+		<meta name="keywords" content="schulte table, speed reading, training, peripheral vision, visual perception, speed reading training, schulte table online, speed reading for children, exercises, game">
 		<title>Schulte table - speed reading training</title>
 		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
