--- a/training/en/index.html
+++ b/training/en/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="description" content="Train speed reading online with Schulte tables">
-		<meta name="keywords" content="schulte table, speed reading, training, kids, android, download, schulte online">
+		<meta name="keywords" content="schulte table, speed reading, training, kids, android, download, schulte online, game">
 		<title>Schulte table online</title>
 		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
