--- a/training/index.html
+++ b/training/index.html
@@ -66,6 +66,10 @@
 				font-size: 1.7rem;
 				text-align: center;
 			}
+			#main h1 a {
+				color: #000;
+				text-decoration: none;
+			}
 			#content {
 				width: 700px;
 				margin: 50px auto 0;
@@ -470,7 +474,7 @@
 	<body>
 		<div id="main">
 			<div id="lang"><a href="/training/en">En</a></div>
-			<h1>Таблица Шульте онлайн</h1>
+			<h1><a href="/" title="На главную">Таблица Шульте онлайн</a></h1>
 			<div id="table_helper">
 				<div class="wrapper">
 					<div class="symbol_to_find"><span class="symbol"></span><br>Найдите символ</div>
