--- a/training/en/index.html
+++ b/training/en/index.html
@@ -66,6 +66,10 @@
 				font-size: 1.7rem;
 				text-align: center;
 			}
+			#main h1 a {
+				color: #000;
+				text-decoration: none;
+			}
 			#content {
 				width: 700px;
 				margin: 50px auto 0;
@@ -470,7 +474,7 @@
 	<body>
 		<div id="main">
 			<div id="lang"><a href="/training">Ru</a></div>
-			<h1>Schulte table online</h1>
+			<h1><a href="/en/" title="To main page">Schulte table online</a></h1>
 			<div id="table_helper">
 				<div class="wrapper">
 					<div class="symbol_to_find"><span class="symbol"></span><br>Symbol to find</div>
