--- a/en/index.html
+++ b/en/index.html
@@ -17,6 +17,7 @@
 		<title>Schulte table - speed reading training</title>
 		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+		<meta property="og:image" content="https://schultetable.ru/icon_big.png" />
 		<style type="text/css">
 			body{
 				font-family: 'Roboto', sans-serif;
