gorbov description added (RU)

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 				font-weight: 400;
 				line-height: 1.3;
 			}
+			a {
+				color: #2e81d6;
+			}
 			#main {
 				position: relative;
 				overflow: hidden;
@@ -149,7 +152,7 @@
 				<h1>Таблица Шульте</h1>
 				<div id="description">
 					<p><b>Таблицы Шульте</b>&nbsp;&mdash; это таблицы со&nbsp;случайно расположенными символами, обычно это числа или буквы, применяемые для проверки и&nbsp;развития скорости их&nbsp;визуального поиска в&nbsp;определенном порядке. Данные таблицы первоначально были разработаны немецким психотерапевтом Вальтером Шульте как психодиагностическая проба для исследования свойств внимания. В&nbsp;дальнейшем их&nbsp;стали использовать в&nbsp;качестве упражнений для тренировки периферического зрительного восприятия, что в&nbsp;свою очередь полезно для развития <a href="/speedreading">навыка скорочтения</a>, да и в целом для мозга. Кроме того данные таблицы используют в&nbsp;психологии (существуют различные методики) при исследовании эффективности и&nbsp;работоспособности людей, их&nbsp;способности удерживать и&nbsp;переключать внимание.</p>
-					<p>В&nbsp;классическом виде таблица Шульте представляет собой квадратный лист бумаги шириной с&nbsp;книгу, который разделен на&nbsp;25&nbsp;одинаковых квадартов, в&nbsp;каждом из&nbsp;которых расположены цифры небольшого размера от&nbsp;1&nbsp;до&nbsp;25, соответственно. Существуют и&nbsp;другие различные виды таблиц, отличающиеся набором символов, размерами, цветами и&nbsp;т.д. Из&nbsp;наиболее известных, можно отметить варианты таблиц Шульте-Горбова с&nbsp;красно-черными ячейками.</p>
+					<p>В&nbsp;классическом виде таблица Шульте представляет собой квадратный лист бумаги шириной с&nbsp;книгу, который разделен на&nbsp;25&nbsp;одинаковых квадартов, в&nbsp;каждом из&nbsp;которых расположены цифры небольшого размера от&nbsp;1&nbsp;до&nbsp;25, соответственно. Существуют и&nbsp;другие различные виды таблиц, отличающиеся набором символов, размерами, цветами и&nbsp;т.д. Из&nbsp;наиболее известных, можно отметить варианты <a href="/gorbov">таблиц Шульте-Горбова</a> с&nbsp;красно-черными ячейками.</p>
 					<p>В&nbsp;народе подобные таблицы стали популярны как этакий тренажер скорочтения. Упражнение выглядит следующим образом: необходимо расположить таблицу на&nbsp;том&nbsp;же расстоянии, на&nbsp;котором вы&nbsp;обычно читаете книгу, затем фокусируете взгляд на&nbsp;ее&nbsp;центре, и, не&nbsp;уводя взгляд от&nbsp;центра, начинаете искать все числа по&nbsp;порядку, используя периферическое зрение. Таких тренировок не&nbsp;должно быть очень много, достаточно около 10&nbsp;в день. Данное упражнение будет полезно для взрослых, так и&nbsp;для детей (например, для школьников), тем более что процесс напоминает игру за&nbsp;счет того, что решать таблицы можно на&nbsp;время в&nbsp;том числе и&nbsp;соревнуясь с&nbsp;другими людьми.</p>
 					<p>На&nbsp;данном сайте <b>бесплатно</b> доступна таблица шульте онлайн, имеются различные варианты настроек: размеры, цвета, буквенные таблицы и&nbsp;числовые. Кроме того вы&nbsp;можете <b>скачать таблицы шульте</b> в&nbsp;виде Android-приложения на&nbsp;свой смартфон или планшет и&nbsp;использовать их&nbsp;в&nbsp;любое удобное время без подключения к&nbsp;интернету (оффлайн). Тренируйте внимание и мозг, где бы вы не находились!</p>
 					
