--- a/en/index.html
+++ b/en/index.html
@@ -141,6 +141,7 @@
 				}
 			}
 		</style>
+		<script data-ad-client="ca-pub-3217707890057220" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
 		<div id="main">
