--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 				}
 			}
 		</style>
+		<script data-ad-client="ca-pub-3217707890057220" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 	</head>
 	<body>
