--- a/index.html
+++ b/index.html
@@ -56,6 +56,29 @@
 			#lang a:hover {
 				background: #ccc;
 			}
+			#banner {
+				position: fixed;
+				bottom: 150px;
+				left: 50%;
+				right: 0;
+				margin-left: 350px;
+			}
+			#banner a {
+				display: block;
+				width: 300px;
+				margin: auto;
+				border-radius: 16px;
+				overflow: hidden;
+				box-shadow: #00000040 0px 5px 10px;
+			}
+			#banner a img {
+				display: block;
+				filter: saturate(0.7);
+			}
+			#banner a:hover img {
+				display: block;
+				filter: saturate(1.0);
+			}
 			#btn_gplay {
 				position: absolute;
 				right: 0;
@@ -159,6 +182,16 @@
 				<div id="description">
 					<p><b>Таблицы Шульте</b>&nbsp;&mdash; это таблицы со&nbsp;случайно расположенными символами, обычно это числа или буквы, применяемые для проверки и&nbsp;развития скорости их&nbsp;визуального поиска в&nbsp;определенном порядке. Данные таблицы первоначально были разработаны немецким психотерапевтом Вальтером Шульте как психодиагностическая проба для исследования свойств внимания. В&nbsp;дальнейшем их&nbsp;стали использовать в&nbsp;качестве упражнений для тренировки периферического зрительного восприятия, что в&nbsp;свою очередь полезно для развития <a href="/speedreading">навыка скорочтения</a>, да и в целом для мозга. Кроме того данные таблицы используют в&nbsp;психологии (существуют различные методики) при исследовании эффективности и&nbsp;работоспособности людей, их&nbsp;способности удерживать и&nbsp;переключать внимание.</p>
 					<p>В&nbsp;классическом виде таблица Шульте представляет собой квадратный лист бумаги шириной с&nbsp;книгу, который разделен на&nbsp;25&nbsp;одинаковых квадартов, в&nbsp;каждом из&nbsp;которых расположены цифры небольшого размера от&nbsp;1&nbsp;до&nbsp;25, соответственно. Существуют и&nbsp;другие различные виды таблиц, отличающиеся набором символов, размерами, цветами и&nbsp;т.д. Из&nbsp;наиболее известных, можно отметить варианты <a href="/gorbov">таблиц Шульте-Горбова</a> с&nbsp;красно-черными ячейками.</p>
+					<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<ins class="adsbygoogle"
+						 style="display:block; text-align:center;"
+						 data-ad-layout="in-article"
+						 data-ad-format="fluid"
+						 data-ad-client="ca-pub-3217707890057220"
+						 data-ad-slot="7304564743"></ins>
+					<script>
+						 (adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
 					<p>В&nbsp;народе подобные таблицы стали популярны как этакий тренажер скорочтения. Упражнение выглядит следующим образом: необходимо расположить таблицу на&nbsp;том&nbsp;же расстоянии, на&nbsp;котором вы&nbsp;обычно читаете книгу, затем фокусируете взгляд на&nbsp;ее&nbsp;центре, и, не&nbsp;уводя взгляд от&nbsp;центра, начинаете искать все числа по&nbsp;порядку, используя периферическое зрение. Таких тренировок не&nbsp;должно быть очень много, достаточно около 10&nbsp;в день. Данное упражнение будет полезно для взрослых, так и&nbsp;для детей (например, для школьников), тем более что процесс напоминает игру за&nbsp;счет того, что решать таблицы можно на&nbsp;время в&nbsp;том числе и&nbsp;соревнуясь с&nbsp;другими людьми.</p>
 					<p>На&nbsp;данном сайте <b>бесплатно</b> доступна таблица шульте онлайн, имеются различные варианты настроек: размеры, цвета, буквенные таблицы и&nbsp;числовые. Кроме того вы&nbsp;можете <b>скачать таблицы шульте</b> в&nbsp;виде Android-приложения на&nbsp;свой смартфон или планшет и&nbsp;использовать их&nbsp;в&nbsp;любое удобное время без подключения к&nbsp;интернету (оффлайн). Тренируйте внимание и мозг, где бы вы не находились!</p>
 					
