--- a/en/index.html
+++ b/en/index.html
@@ -141,7 +141,6 @@
 				}
 			}
 		</style>
-		<script data-ad-client="ca-pub-3217707890057220" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
 		<div id="main">
@@ -152,6 +151,17 @@
 					<p><b>Schulte tables</b> are tables with randomly arranged characters, usually numbers or letters used to check and develop the speed of their visual search in a specific order. These tables were originally developed by the German psychotherapist Walter Schulte as a psychodiagnostic test for studying the properties of attention. Later they began to be used as exercises for training peripheral visual perception, which is useful for developing the speed reading skill. In addition, these tables are used in psychology (there are various methods) in studying the effectiveness and efficiency of people, their ability to hold and switch attention.</p>
 
 					<p>In the classical form, Schulte's table is a square sheet of paper the width of a book, which is divided into 25 identical squares, each of which contains small numbers from 1 to 25. There are other various types of tables that differ in character sets, sizes, colors, etc. Of the most famous, it is possible to note the variants of the Schulte-Gorbov tables with red-black cells.</p>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<ins class="adsbygoogle"
+						 style="display:block; text-align:center;"
+						 data-ad-layout="in-article"
+						 data-ad-format="fluid"
+						 data-ad-client="ca-pub-3217707890057220"
+						 data-ad-slot="7304564743"></ins>
+					<script>
+						 (adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
 
 					<p>Popularly, such tables have become popular as a kind of speed reading simulator. The exercise is as follows: you need to position the table at the same distance at which you usually read the book, then focus your eyes on its center, and, without taking your eyes off the center, start searching for all the numbers in order, using peripheral vision. Such trainings should not be very much, about 10 per day is enough. This exercise will be useful for adults and for children (for example, for schoolchildren), especially since the process resembles a game due to the fact that you can solve tables for a while including competing with other people.</p>
 
