--- a/gorbov/index.html
+++ b/gorbov/index.html
@@ -182,6 +182,8 @@
 				}
 			}
 		</style>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3217707890057220"
+     crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div id="main">
@@ -191,16 +193,6 @@
 				<div id="description">
 					<p><b>Красно-черные таблицы Шульте-Горбова</b> (или Горбова-Шульте)&nbsp;&mdash; одна из&nbsp;самых распространенных разновидностей таблиц шульте. Данный тест предназначен для оценки скорости переключения внимания и&nbsp;может использоваться для определения профпригодности к&nbsp;профессиям, требующим повышенной концентрации и&nbsp;быстрой реакции (например авиадиспетчеры, машинисты поездов ржд и&nbsp;др.). Под переключаемостью внимания понимается перевод внимания с&nbsp;одного объекта на&nbsp;другой (или с&nbsp;одного вида деятельности на&nbsp;иной).</p>
 					<p>Данные таблицы состоят из&nbsp;49&nbsp;клеток (размер 7&times;7) черного и&nbsp;красного цветов, 25&nbsp;черных (от&nbsp;1&nbsp;до&nbsp;25) и&nbsp;24&nbsp;красных (от&nbsp;1&nbsp;до&nbsp;24). Испытуемый должен попеременно указывать числа, черные в&nbsp;возрастающем порядке, а&nbsp;красные в&nbsp;убывающем: 1&nbsp;черное, 24&nbsp;красное, 2&nbsp;черное, 23&nbsp;красное и&nbsp;т.д. Тест проводится с&nbsp;учетом времени и&nbsp;ошибок. Возможен и&nbsp;вариант испытания, при котором сначала в&nbsp;порядке возрастания находятся числа одного цвета и&nbsp;в&nbsp;обратном порядке другого цвета, для дополнительного контроля числа могут сопровождаться буквами, которые необходимо записывать на&nbsp;лист бумаги по&nbsp;мере нахождения чисел.</p>
-					<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<ins class="adsbygoogle"
-						 style="display:block; text-align:center;"
-						 data-ad-layout="in-article"
-						 data-ad-format="fluid"
-						 data-ad-client="ca-pub-3217707890057220"
-						 data-ad-slot="7304564743"></ins>
-					<script>
-						 (adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
 					<p>Существуют и&nbsp;другие методики для оценки переключаемости внимания, одной из&nbsp;таких является методика Платнова, таблицы с&nbsp;арабско-римскими цифрами. В&nbsp;целом она аналогична вышеописанной с&nbsp;той разницей, что здесь необходимо искать арабские числа в&nbsp;обычном порядке от&nbsp;1&nbsp;до&nbsp;25, а&nbsp;римские&nbsp;&mdash; в&nbsp;обратном от&nbsp;XXIV до&nbsp;I.</p>
 					<p>На&nbsp;данном сайте представлена вариация красно-черных таблиц с&nbsp;возможностью выбора размера таблицы (не&nbsp;забывайте, что стандартным вариантом является размер 7&times;7).</p>
 					<div class="btns_container">
