--- a/speedreading/index.html
+++ b/speedreading/index.html
@@ -182,6 +182,8 @@
 				}
 			}
 		</style>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3217707890057220"
+     crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div id="main">
@@ -193,16 +195,6 @@
 					<h2>Как читать быстрее?</h2>
 					<p>Когда-то, будучи ребенком большинство из&nbsp;нас сначала учило буквы, потом, чтобы прочитать целое слово, мы&nbsp;складывали его из&nbsp;слогов и&nbsp;теперь без проблем воспринимаем слова, просто взглянув на&nbsp;них. Однако, если развивать эту идею, то&nbsp;можно стремиться воспринимать сразу несколько слов за&nbsp;раз.</p>
 					<p>Еще в&nbsp;конце XIX века французский врач-офтальмолог Луи Эмиль Жаваль заметил, что глаза совершают короткие движения с&nbsp;короткими остановками. Во&nbsp;время чтения одной строки глаза останавливаются примерно 3&ndash;4&nbsp;раза, а&nbsp;не&nbsp;на&nbsp;каждом знаке. Исследование показало, что поле зрения человека шире, чем считалось ранее.</p>
-					<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<ins class="adsbygoogle"
-						 style="display:block; text-align:center;"
-						 data-ad-layout="in-article"
-						 data-ad-format="fluid"
-						 data-ad-client="ca-pub-3217707890057220"
-						 data-ad-slot="7304564743"></ins>
-					<script>
-						 (adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
 					<p>Чтобы <b>научиться быстро читать</b>, необходимо тренировать определенные навыки, речь о&nbsp;которых пойдет ниже.</p>
 					<p><b>Расширение поля зрительного восприятия</b>. За&nbsp;счет данного навыка за&nbsp;одну остановку взгляда тренированный человек может охватить большее количество слов (вплоть до&nbsp;целой строки). Нужно стремиться воспринимать строку текста за&nbsp;всё меньшее и&nbsp;меньшее количество переводов взгляда, благодаря этому скорость чтения будет выше, а&nbsp;утомляемость ниже. Для улучшения периферического зрения существуют различные специальные упражнения в&nbsp;том числе и&nbsp;с&nbsp;<a href="/training">таблицами Шульте</a>, которым посвящен данный сайт.</p>
 					<p><b>Устранение возвратных движений глаз</b> при чтении, перечитывания предложений и&nbsp;абзацев. Читая мы&nbsp;постоянно возвращаемся глазами назад и&nbsp;заново пробегаемся по&nbsp;тексту. Обычно мы&nbsp;делаем это неосознанно, просто из&nbsp;привычки, чтобы избавиться от&nbsp;нее, можно какое-то время помогать себе пальцем (или ручкой, карандашом) при чтении, ведя им&nbsp;по&nbsp;строке, это также поможет глазу быстрее двигаться по&nbsp;строке.</p>
