--- a/training/index.html
+++ b/training/index.html
@@ -23,6 +23,7 @@
 			body{
 				font-family: 'Roboto', sans-serif;
 				margin: 0;
+				padding: 0 !important;
 				background: #eee;
 			}
 			#main {
