--- a/speedreading/index.html
+++ b/speedreading/index.html
@@ -16,7 +16,6 @@
 		<meta name="keywords" content="скорочтение, таблица шульте, скоростное чтение, быстрое чтение, тренажер, периферическое зрение, зрительное восприятие, тренировка скорочтения, таблица шульте онлайн, скорочтение онлайн, упражнения">
 		<title>Скорочтение: методика и упражения, таблица Шульте онлайн</title>
 		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 		<meta property="og:image" content="https://schultetable.ru/icon_big.png" />
 		<style type="text/css">
 			@keyframes arrow-anim {
@@ -28,7 +27,7 @@
 				}
 			}
 			body{
-				font-family: 'Roboto', sans-serif;
+				font-family: Arial, Tahoma, sans-serif;
 				margin: 0;
 				background: #eee;
 				font-weight: 400;
