--- a/gorbov/index.html
+++ b/gorbov/index.html
@@ -16,7 +16,6 @@
 		<meta name="keywords" content="таблица шульте, методика горбова, тренажер, периферическое зрение, зрительное восприятие, таблица шульте онлайн, переключение внимания, тест, онлайн, красно-черные таблицы">
 		<title>Таблицы Шульте-Горбова: тест оценки переключаемости внимания онлайн</title>
 		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 		<meta property="og:image" content="https://schultetable.ru/icon_big.png" />
 		<style type="text/css">
 			@keyframes arrow-anim {
@@ -28,7 +27,7 @@
 				}
 			}
 			body{
-				font-family: 'Roboto', sans-serif;
+				font-family: Arial, Tahoma, sans-serif;
 				margin: 0;
 				background: #eee;
 				font-weight: 400;
