--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<meta name="keywords" content="таблица шульте, скорочтение, тренажер, периферическое зрение, зрительное восприятие, тренировка скорочтения, таблица шульте онлайн, скорочтение для детей, тренировка мозга, упражнения, игра, андроид, android">
 		<title>Таблица Шульте - тренажер скорочтения онлайн + приложение для андроид</title>
 		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+		<!--link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"-->
 		<meta property="og:image" content="https://schultetable.ru/icon_big.png" />
 		<style type="text/css">
 			body{
-				font-family: 'Roboto', sans-serif;
+				font-family: Arial, Tahoma, sans-serif;
 				margin: 0;
 				background: #eee;
 				font-weight: 400;
