--- a/training/index.html
+++ b/training/index.html
@@ -16,12 +16,11 @@
 		<meta name="keywords" content="таблица шульте, скорочтение, тренажер, периферическое зрение, зрительное восприятие, тренировка скорочтения, игра">
 		<title>Таблица Шульте онлайн</title>
 		<link rel="icon" href="https://schultetable.ru/favicon.ico" type="image/x-icon">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="../bootstrap.min.css">
 		<meta property="og:image" content="https://schultetable.ru/icon_big.png" />
 		<style type="text/css">
 			body{
-				font-family: 'Roboto', sans-serif;
+				font-family: Arial, Tahoma, sans-serif;
 				margin: 0;
 				padding: 0 !important;
 				background: #eee;
