--- a/training/en/index.html
+++ b/training/en/index.html
@@ -496,8 +496,18 @@
 				}
 			}
 		</style>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3217707890057220"
-     crossorigin="anonymous"></script>
+		
+		<!-- Yandex.RTB -->
+		<script>window.yaContextCb=window.yaContextCb||[]</script>
+		<script src="https://yandex.ru/ads/system/context.js" async></script>
+		<!-- Yandex.RTB R-A-1634786-2 -->
+		<script>window.yaContextCb.push(()=>{
+		  Ya.Context.AdvManager.render({
+			type: 'fullscreen',
+			blockId: 'R-A-1634786-2'
+		  })
+		})</script>
+		
 	</head>
 	<body>
 		<div id="main">
