--- a/speedreading/index.html
+++ b/speedreading/index.html
@@ -10,6 +10,11 @@
 
 		  gtag('config', 'UA-163614281-1');
 		</script>
+		
+		<!-- Yandex.RTB -->
+		<script>window.yaContextCb=window.yaContextCb||[]</script>
+		<script src="https://yandex.ru/ads/system/context.js" async></script>
+		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="description" content="Как читать быстрее? Быстрое восприятие текстовой информации: плюсы и минусы. Тренировка скорочтения онлайн с помощью таблиц Шульте.">
@@ -191,6 +196,14 @@
 					<p><b>Скорочтение</b> (скоростное чтение или быстрое чтение)&nbsp;&mdash; способность быстрого восприятия текстовой информации достигаемая за&nbsp;счет использования определенных техник. По&nbsp;разным данным для русского языка средняя скорость чтения текста взрослым человеком составляет от&nbsp;100 до&nbsp;180 слов в&nbsp;минуту в&nbsp;зависимости от&nbsp;особенностей читаемого текста и&nbsp;ряда других условий, при скорочтении человек способен воспринимать в&nbsp;3-4 раза больше слов, до&nbsp;600 слов в&nbsp;минуту. Стоит понимать, что скорочтение существенно ухудшает понимание и&nbsp;усвоение прочитанного, поэтому применять данный навык стоит с&nbsp;умом, в&nbsp;зависимости от&nbsp;необходимости усвоения подробностей текста.</p>
 					<h2>Как читать быстрее?</h2>
 					<p>Когда-то, будучи ребенком большинство из&nbsp;нас сначала учило буквы, потом, чтобы прочитать целое слово, мы&nbsp;складывали его из&nbsp;слогов и&nbsp;теперь без проблем воспринимаем слова, просто взглянув на&nbsp;них. Однако, если развивать эту идею, то&nbsp;можно стремиться воспринимать сразу несколько слов за&nbsp;раз.</p>
+					<!-- Yandex.RTB R-A-1634786-3 -->
+					<div id="yandex_rtb_R-A-1634786-3"></div>
+					<script>window.yaContextCb.push(()=>{
+					  Ya.Context.AdvManager.render({
+						renderTo: 'yandex_rtb_R-A-1634786-3',
+						blockId: 'R-A-1634786-3'
+					  })
+					})</script>
 					<p>Еще в&nbsp;конце XIX века французский врач-офтальмолог Луи Эмиль Жаваль заметил, что глаза совершают короткие движения с&nbsp;короткими остановками. Во&nbsp;время чтения одной строки глаза останавливаются примерно 3&ndash;4&nbsp;раза, а&nbsp;не&nbsp;на&nbsp;каждом знаке. Исследование показало, что поле зрения человека шире, чем считалось ранее.</p>
 					<p>Чтобы <b>научиться быстро читать</b>, необходимо тренировать определенные навыки, речь о&nbsp;которых пойдет ниже.</p>
 					<p><b>Расширение поля зрительного восприятия</b>. За&nbsp;счет данного навыка за&nbsp;одну остановку взгляда тренированный человек может охватить большее количество слов (вплоть до&nbsp;целой строки). Нужно стремиться воспринимать строку текста за&nbsp;всё меньшее и&nbsp;меньшее количество переводов взгляда, благодаря этому скорость чтения будет выше, а&nbsp;утомляемость ниже. Для улучшения периферического зрения существуют различные специальные упражнения в&nbsp;том числе и&nbsp;с&nbsp;<a href="/training">таблицами Шульте</a>, которым посвящен данный сайт.</p>
