--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
 						<a href="/training" class="online">Тренироваться онлайн</a>
 						<a href="https://play.google.com/store/apps/details?id=ru.kriopeg.schultetable&referrer=utm_source%3Dweb_schulte_ru%26utm_medium%3Dmain" class="android" target="_blank">Скачать на Android</a>
 					</div>
+					
+					<p style="margin-top: 40px">А если вы любитель словесных игр, то можете попробовать Android-игру <a href="https://play.google.com/store/apps/details?id=ru.kriopeg.words.games.puzzles&referrer=utm_source%3Dweb_schulte_ru%26utm_medium%3Dmain" style="color: #6632ba"><b>Словолов</b></a>, в&nbsp;которой необходимо составлять слова из предложенных букв.</p>
 				</div>
 				
 				<a href="https://expdd.ru" target="_blank" class="pdd_link">Экзаменационные билеты ПДД (AB/CD) <br><i>Сдай экзамен в ГИБДД на отлично!</i><span class="arrow"></span></a>
