--- a/training/index.html
+++ b/training/index.html
@@ -63,8 +63,18 @@
 			#btn_gplay img {
 				width: 200px;
 			}
+			#btn_gplay .ya_btn img {
+				width: 170px;
+			}
+			#btn_gplay a {
+				display: block;
+				margin-top: 10px;
+			}
 			#btn_gplay a:hover img {
 				opacity: 0.7;
+			}
+			#btn_gplay .ya_btn {
+				margin-top: 20px;
 			}
 			#main h1 {
 				position: absolute;
@@ -650,6 +660,12 @@
 		<script src="../popper.min.js"></script>
 		<script src="../bootstrap.min.js"></script>
 		<script src="../scripts.js"></script>
+		
+		<script>
+			$(document).ready(function() {
+				$('#btn_gplay').prepend('<a href="https://yandex.ru/games/app/284930" target="_blank" class="ya_btn"><img  alt=\'Доступно в Google Play\' src=\'../images/ya_games_logo.png\'/></a>');
+			});
+		</script>
 		
 		<!-- Yandex.Metrika counter -->
 		<script type="text/javascript" >
